@@ -1,6 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 25Jun2015 Fix crash when temporal dir != final dir and their shared
+               characteristics differ.
  * 23Jun2015 Add initial PEBS sampling support
              Split sampling files into src/tracer/sampling
  * 17Jun2015 Fix extrae command line, lack of thread init
